# vaishali

./: .gitignore  CLAUDE.md  MANIFEST.in  Procfile  README.md  dump.rdb  pyproject.toml  setup.py
.claude-memory/: MEMORY.md  README.md  allocate_earned_leaves_no_dedupe.md  api_js_method_aware.md  apicall_envelope_unwrap.md  auth_guard_401_pattern.md  camera_only_attach_pattern.md  checkin_utc_to_ist_migration_2026-05-06.md  crm_forward_funnel.md  dcepl_cws_qa_qc_guard.md  dcepl_dgoc_sync.md  dcepl_ers_abc_classification.md  dcepl_ers_reorder_levels.md  dcepl_mrn_approval_guard.md  dcepl_outward_gate_pass.md  dcr_prospect_mandatory_fix.md  doctype_js_hook_skipped_for_custom.md  email_account_harsh_alias.md  email_integration.md  encryption_key_lock.md  ers_group_structure.md  ers_group_tally.md  feedback_ui_style.md  feedback_working_style.md  frappe_403_session.md  frappe_autoname_dotted_no_format_prefix.md  frappe_get_all_ignore_permissions.md  frappe_salary_formula_sandbox.md  google_oauth_userinfo_endpoint.md  india_compliance_account_2026-05-06.md  leave_allocation_fy_2026_27.md  leave_attendance_system.md  mark_present_attendance_cron.md  payroll_setup.md  private_inbox_lock.md  project_data_sync.md  project_desk_overhaul.md  project_erp_buildout.md  pwa_inplace_rerender_pattern.md  pwa_timestamp_ist_convention.md  (+14 more)
.playwright-mcp/: Receipe---RC0103-222350.xlsx  Recipe-List.xlsx  krisp-recipes-fixed.json  krisp-recipes-full.json
config/: redis_cache.conf  redis_queue.conf
docs/: pwa-navigation-map.md
tasks/: store_sop_walkthrough.md  todo.md
(+283 files in other folders)
