[project]
name = "vaishali"
version = "0.1.0"
description = "DSPL Org OS — AI agent + View Engine for ERPNext"
requires-python = ">=3.10"
authors = [{name = "Harshwardhan Gokhale", email = "harsh@dgoc.in"}]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
hrms = ">=15.0.0"
